<resources>
    <string name="app_name">HomeApp</string>
    <string name="volume_down">Vol Down</string>
    <string name="volume_up">Vol Up</string>
    <string name="av_on">A/V On</string>
    <string name="av_stdby">A/V STDBY</string>
    <string name="monitor">MONITOR</string>
    <string name="scenes">Scenes</string>
    <string name="scene1">XBOX</string>
    <string name="scene2">PS</string>
    <string name="scene3">STEAM</string>
    <string name="mute">MUTE</string>
</resources>
