<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/av_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/avon"
            android:drawableStart="@drawable/ic_power_settings" app:layout_constraintEnd_toStartOf="@+id/avstdby"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/avstdby"/>
    <Button
            android:text="@string/av_stdby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/avstdby"
            android:drawableStart="@drawable/ic_power_settings" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/monpower"
            android:drawableStart="@drawable/ic_power_settings" app:layout_constraintStart_toEndOf="@+id/avstdby"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/avstdby"/>
    <Button
            android:text="@string/scene1"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/scene1"
            android:textColor="@android:color/white" android:background="@color/colorPrimary" android:textSize="24sp"
            android:textAlignment="center" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/scene2"
            app:layout_constraintTop_toTopOf="@+id/scene2"/>
    <Button
            android:text="@string/scene2"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/scene2"
            android:textColor="@android:color/white" android:background="@color/colorPrimary" android:textSize="24sp"
            android:textAlignment="center" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/avstdby"/>
    <Button
            android:text="@string/scene3"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/scene3"
            app:layout_constraintStart_toEndOf="@+id/scene2"
            android:textColor="@android:color/white" android:background="@color/colorPrimary" android:textSize="24sp"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/scene2"/>
    <Button
            android:layout_width="48dp"
            android:layout_height="45dp"
            android:id="@+id/volup" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/scene1"
            android:drawableStart="@drawable/ic_volume_up" app:layout_constraintStart_toStartOf="@+id/scene1"
            android:layout_marginStart="16dp"/>
    <Button
            android:layout_width="48dp"
            android:layout_height="45dp"
            android:id="@+id/voldown"
            android:drawableStart="@drawable/ic_volume_down" app:layout_constraintStart_toStartOf="@+id/volup"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/volup"/>
    <Button
            android:layout_width="48dp"
            android:layout_height="45dp"
            android:id="@+id/chup"
            android:drawableStart="@drawable/ic_arrow_up"
            app:layout_constraintEnd_toEndOf="@+id/scene3"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="@+id/volup"/>
    <Button
            android:layout_width="48dp"
            android:layout_height="45dp"
            android:id="@+id/chdown"
            android:drawableStart="@drawable/ic_arrow_down"
            app:layout_constraintEnd_toEndOf="@+id/chup"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/chup"/>
    <Button
            android:text="@string/mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mute" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/scene2"/>
</android.support.constraint.ConstraintLayout>